# backend

./: .Dockerignore  .coverage  .flake8  .gitignore  Dockerfile  Dockerfile.uv  Doxyfile  README.md  alembic.ini  compose.yaml  pyproject.toml  readme.md  requirements.txt  test.db
.githooks/: pre-commit
.github/: pull_request_template.md
.github/scripts/: bump_version.sh  start.sh  tests.sh  version.sh
.github/workflows/: ci_test_build_and_push_docker_image.yml  ci_tests.yml  version_bump.yml
app/: README.md  dependencies.py  main.py
app/config/: settings.py
app/db/: connection.py
app/models/: __init__.py  control_unit_model.py  shipment_model.py  user_model.py
app/services/: auth_service.py  control_unit_service.py  shipment_service.py  user_service.py
app/utils/: JWT.py  generate_mock_token.py  hash.py  rate_limiter.py  security.py
docs/: CI_CD_pipeline.md  CI_docker_build.md  CI_tests.md  CI_tests_build_and_push_docker_image_v1_readme.md  CI_v1_readme.md  CI_version_bump.md  CI_version_bump_readme.md  Running the Backend Container Locally.md  azure_server_guide.md  install.md  running_backend_locally.md
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_controlunit_endpoints.py  test_shipment_endpoints.py  test_shiptment_endpoints.py  test_user_endpoints.py
tests/unit/: test_crud.py  test_crud_controlunit.py  test_crud_shipmentmodel.py  test_crud_shiptmentmodel.py  test_crud_usermodel.py  test_not_empty.py  test_schemas.py  test_schemas_controlunit.py  test_schemas_shipmentmodel.py  test_schemas_usermodel.py
(+21 files in other folders)
